<resources>
    <string name="app_name">Credit Card Helper</string>
    <string name="Card_Balance">Enter Card Balance($)</string>
    <string name="Card_InterestRate">Enter Yearly Interest Rate(%)</string>
    <string name="Card_MinPayment">Enter Minimum Payment ($)</string>
    <string name="Card_FinBalance">Final Card Balance ($)</string>
    <string name="Card_Month_Remaining">Months Remaining</string>
    <string name="Card_Interest">Interest Paid Will Be ($) </string>
    <string name="Compute">COMPUTE</string>
    <string name="Clear">CLEAR</string>
</resources>
